# lol-term

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs  models.rs
src/utils/: api.rs  config.rs  renderer.rs  util.rs
