[package]
name = "lolt"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.21", features = ["json", "stream"] }
tokio = { version = "1.0.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
viuer = { version = "0.9.2", features = ["print-file"] }
dotenv = "0.15.0"